# CAF-RNTuple

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CAFCI.yml
test/: CMakeLists.txt  Test_CAFRNTuple.cxx  Test_CAFTree.cxx  compression_rntuple.C  compression_ttree.C  simple_converter.C
utilities/: FillStandardRecordObjects.h  StandardRecordObjects.h
